--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,6 @@
-# Transcoder (agention) service parameters
-# agentHost: "localhost"
-agentHost: "localhost"
+# Monitor parameters
+monitorUiPort: 8081
+
+# Agent service parameters
+agentHosts: ["localhost"]
 agentPort: 50050
