--- a/monitor/config.yaml
+++ b/monitor/config.yaml
@@ -1,6 +1,6 @@
 # Monitor parameters
-monitorUiPort: 8080
+monitorPort: 40040
 
 # Agent service parameters
-agentHosts: ["localhost", "localhost"]
-agentPort: 50050
+agentHosts: ["192.168.1.229"]
+agentPort: 40050
